# ocr-pipeline

./: ocr_extraction_map.json
ocr_service/: .env.example  config.py  gemini_client.py  main.py  prompts.py  pyproject.toml  requirements.txt  schemas.py
