[project]
name = "ocr-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "google-genai==1.14.0",
    "pdf2image==1.17.0",
    "pillow==10.4.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "uvicorn[standard]==0.30.6",
]
